# LK

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml  cmake-windows.yml
examples/: example1.cpp
include/LK/: Algorithms.h  Array.h  Assert.h  Buffer.h  CString.h  Exception.h  Human.h  Meta.h  Types.h  UnitTest.h  Version.h
src/: Assert.cpp  CString.cpp  Exception.cpp  Human.cpp  UnitTest.cpp  Version.cpp
tests/: Test_Array.cpp  Test_Buffer.cpp  Test_CString.cpp
